// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageData hide dev tools and stack management links if unavailable 1`] = `
<EuiPageTemplate.Section
  aria-labelledby="homeDataManage__title"
  bottomBorder={true}
  data-test-subj="homeDataManage"
  paddingSize="xl"
>
  <EuiFlexGroup
    alignItems="center"
  >
    <EuiFlexItem
      grow={1}
    >
      <EuiTitle
        size="s"
      >
        <h2
          id="homeDataManage__title"
        >
          <MemoizedFormattedMessage
            defaultMessage="Management"
            id="home.manageData.sectionTitle"
          />
        </h2>
      </EuiTitle>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <div
    css="unknown styles"
  >
    <Synopsis
      description="Control who has access and what tasks they can perform."
      iconType="securityApp"
      id="security"
      key="security"
      onClick={[Function]}
      title="Protect your data"
      url="path-to-security-roles"
    />
    <Synopsis
      description="Track the real-time health and performance of your deployment."
      iconType="monitoringApp"
      id="monitoring"
      key="monitoring"
      onClick={[Function]}
      title="Monitor the stack"
      url="path-to-monitoring"
    />
    <Synopsis
      description="Save snapshots to a backup repository, and restore to recover index and cluster state."
      iconType="storage"
      id="snapshot_restore"
      key="snapshot_restore"
      onClick={[Function]}
      title="Store & recover backups"
      url="path-to-snapshot-restore"
    />
    <Synopsis
      description="Define lifecycle policies to automatically perform operations as an index ages."
      iconType="indexSettings"
      id="index_lifecycle_management"
      key="index_lifecycle_management"
      onClick={[Function]}
      title="Manage index lifecycles"
      url="path-to-index-lifecycle-management"
    />
  </div>
</EuiPageTemplate.Section>
`;

exports[`ManageData render 1`] = `
<EuiPageTemplate.Section
  aria-labelledby="homeDataManage__title"
  bottomBorder={true}
  data-test-subj="homeDataManage"
  paddingSize="xl"
>
  <EuiFlexGroup
    alignItems="center"
  >
    <EuiFlexItem
      grow={1}
    >
      <EuiTitle
        size="s"
      >
        <h2
          id="homeDataManage__title"
        >
          <MemoizedFormattedMessage
            defaultMessage="Management"
            id="home.manageData.sectionTitle"
          />
        </h2>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiFlexGroup
        alignItems="center"
        responsive={false}
        wrap={true}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="homeDevTools"
            flush="both"
            href=""
            iconType="wrench"
          >
            <MemoizedFormattedMessage
              defaultMessage="Dev Tools"
              id="home.manageData.devToolsButtonLabel"
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer />
  <div
    css="unknown styles"
  >
    <Synopsis
      description="Control who has access and what tasks they can perform."
      iconType="securityApp"
      id="security"
      key="security"
      onClick={[Function]}
      title="Protect your data"
      url="path-to-security-roles"
    />
    <Synopsis
      description="Track the real-time health and performance of your deployment."
      iconType="monitoringApp"
      id="monitoring"
      key="monitoring"
      onClick={[Function]}
      title="Monitor the stack"
      url="path-to-monitoring"
    />
    <Synopsis
      description="Save snapshots to a backup repository, and restore to recover index and cluster state."
      iconType="storage"
      id="snapshot_restore"
      key="snapshot_restore"
      onClick={[Function]}
      title="Store & recover backups"
      url="path-to-snapshot-restore"
    />
    <Synopsis
      description="Define lifecycle policies to automatically perform operations as an index ages."
      iconType="indexSettings"
      id="index_lifecycle_management"
      key="index_lifecycle_management"
      onClick={[Function]}
      title="Manage index lifecycles"
      url="path-to-index-lifecycle-management"
    />
  </div>
</EuiPageTemplate.Section>
`;

exports[`ManageData render null without any features 1`] = `""`;
